# drf-haystack-search-filter

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
src/drf_haystack_search_filter/: __init__.py  filters.py
