[project]
name = "drf-haystack-search-filter"
version = "1.3.0"
description = "A django-haystack search filter for Django Rest Framework."
readme = "README.md"
authors = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
maintainers = [
    { name = "Stefano Fusai", email = "stefanofusai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.0.0,<6.0.0",
    "django-haystack>=3.0,<4.0.0",
    "djangorestframework>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/stefanofusai/drf-haystack-search-filter"
Repository = "https://github.com/stefanofusai/drf-haystack-search-filter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
development = [
    "pre-commit==4.0.1",
    "ruff==0.8.2",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Bad rules
    "COM812",
    "D203",
    "D212",
    "E501",
    "FA102",
    "FIX",
    "ISC001",
    "PLR2004",
    "RUF012",
    "S101",
    "S311",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    # Project-specific rules
    "ARG002",
    "D100",
    "D104"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv]
resolution = "lowest-direct"
